[build-system]
requires = ["setuptools>=68.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bzw"
version = "0.3.1"
description = "Wrapper for bzw object creation and file population"
readme = "README.md"
authors = [{ name = "tainn" }]
keywords = ["package", "map", "bzflag"]
dependencies = []
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.urls]
homepage = "https://github.com/tainn/bzw"

[tool.ruff]
fix = true
indent-width = 4
line-length = 120
src = ["bzw"]
select = [
    "I001",
    "F401"
]

[tool.ruff.lint.isort]
known-first-party = ["bzw"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.mypy]
strict = true
exclude = ["build"]

[[tool.mypy.overrides]]
module = ["setuptools"]
ignore_missing_imports = true
