[build-system]
requires = ["setuptools>=69.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bzw"
version = "0.3.2"
readme = "readme.md"
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.urls]
homepage = "https://github.com/tainn/bzw"

[tool.ruff]
fix = true
indent-width = 4
line-length = 120
src = ["bzw"]

[tool.ruff.lint]
select = [
    "I001",
    "F401"
]

[tool.ruff.lint.isort]
known-first-party = ["bzw"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.mypy]
strict = true
disable_error_code = [
    "no-any-return",
    "func-returns-value"
]
exclude = ["venv", "build"]

[[tool.mypy.overrides]]
module = ["setuptools"]
ignore_missing_imports = true
