[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bzw"
version = "0.3.3"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
fix = true
indent-width = 4
line-length = 120
src = ["bzw"]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "I",
  "N",
  "UP",
  "ANN",
  "B",
  "A",
  "ICN",
  "PIE",
  "Q",
  "RSE",
  "RET",
  "SIM",
  "ARG",
  "PTH"
]
ignore = ["ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["bzw"]

[tool.ruff.format]
preview = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true
